--- a/client/src/Components/Styles/NavBar.css
+++ b/client/src/Components/Styles/NavBar.css
@@ -1,41 +1,106 @@
-/* Estilos para el contenedor de la barra de navegación */
-.navbar {
-    width: 100%;
-    /* padding: 20px 0; */ /* Espacio en la parte superior e inferior */
-    box-sizing: border-box; /* Asegura que el padding se incluya en el ancho total */
-/*     background-color: #f0f0f0; */ /* Fondo para visualizar el contorno de la navbar */
-    padding-bottom: 20px;
-    margin-top: 50px;
+
+.hamburger-icon {
+    display: none;
+    cursor: pointer;
+    font-size: 34px;
+    color:white;
 }
 
-/* Estilos para el título de la barra de navegación */
-.navbar h1 {
-    margin-bottom: 20px;
-    text-align: center;
-}
 
-/* Estilos para la lista de enlaces de navegación */
-.navbar-links {
+.img-main {
+    max-width: 80px;
+    cursor: pointer;
     list-style-type: none;
-    padding: 0;
-    margin: 20px 0 0 0;
+}
+
+.navbar-container{
+    
+    /* background-color: #19427e; */
+    /* border-radius: 15px; */
+    /* background-color: #f0f0f0; */
+   /*  padding: 10px 20px; */
     display: flex;
-    justify-content: space-around; /* Espacio alrededor de los elementos */
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    position: relative;
+    z-index: 1000;
 }
 
-/* Estilos generales para los enlaces de navegación */
-.navbar-link {
-    flex: 1;
-    padding: 15px 40px;
+
+.navbar-links{
+    list-style: none;
     text-align: center;
-    background-color: blue;
-    color: white;
-    text-decoration: none;
-    margin: 0 5px; /* Espacio entre los rectángulos */
+    gap: 20px;
+    /* margin-left: auto; */
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
 }
 
-/* Estilos para los enlaces de navegación activos */
-.navbar-link.active {
-    background-color: red;
+
+.navbar-links li a{
+    text-decoration: none;
     color: white;
+    font-size: 16px;
+    padding: 5px 10px;
+    /* background-color: #19427e; */
+    border-radius: 10px;
+    
+}
+
+.navbar-links li a:hover {
+    text-decoration: none;
+    color:black;
+    font-size: 16px;
+    padding: 10px 10px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+.navbar-link.active {
+    text-decoration: none;
+    color:black;
+    font-size: 16px;
+    padding: 10px 10px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+
+@media (max-width: 768px) {
+    .hamburger-icon {
+        display: block;
+    }
+
+    .navbar-links {
+        display: none;
+        flex-direction: column;
+        width: 30%;
+        background-color: #242424;
+        padding: 10px;
+        position: absolute;
+        top: 100%;
+        right: 0;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        
+    }
+
+    .navbar-links.open {
+        display: flex;
+    }
+
+    .navbar-links li {
+        margin: 3px 0;
+    }
+    
+
+    .navbar-links li a:hover {
+        color:black;
+        background-color: white;
+        box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+    }
 }
